[package]
name = "item_rest_api"
version = "0.1.0"
authors = ["Matt Cortez <matthew.cortez@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_codegen = "0.4.2"
rocket_contrib = "0.4.2"
tiberius = "0.3.2"
futures = "0.1.28"
tokio = "0.1.22"
futures-state-stream = "0.1.0"
serde = "1.0.98"
serde_json = "1.0.40"
serde_derive = "1.0.98"